# fang-razer-linux

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HARDWARE_TESTING.md  LICENSE  README.md  install.sh  rust-toolchain.toml
.claude/: launch.json
.github/ISSUE_TEMPLATE/: bug_report.yml  model-support.yml
.github/workflows/: ci.yml  release.yml
app/: index.html  package-lock.json  package.json  vite.config.js
app/scripts/: gen-icons.mjs  version.mjs  version.test.mjs
app/src/: App.svelte  app.css  main.js
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: client.rs  color.rs  display.rs  main.rs  panel.rs
app/src/lib/: bridge.js  changelog-content.test.js  icons.js  stores.js  support-content.test.js  ui-settings.js  ui-settings.test.js  updater.js  updater.test.js
app/src/lib/components/: FanSpinner.svelte  Gauge.svelte  Icon.svelte  ModeCard.svelte  Sparkline.svelte  Toggle.svelte
app/src/screens/: Changelog.svelte  Dashboard.svelte  Disconnected.svelte  FanScreen.svelte  GpuDisplay.svelte  Lighting.svelte  Performance.svelte  Settings.svelte  Support.svelte
crates/fang-protocol/: Cargo.toml
crates/fang-protocol/src/: api.rs  lib.rs  models.rs  packet.rs
crates/fangd/: Cargo.toml
crates/fangd/src/: core.rs  ddc.rs  gpu.rs  main.rs  peripherals.rs  power.rs  process.rs  server.rs  state.rs
crates/fangd/src/hw/: mock.rs  mod.rs  razer.rs  sensors.rs
crates/fangd/tests/: integration.rs
docs/superpowers/plans/: 2026-07-18-fedora-rpm-support.md  2026-07-23-beginner-friendly-readme.md  2026-07-23-beginner-readme-release-contract-reconciliation.md  2026-07-23-documentation-deb-rebuild.md  2026-07-23-neon-fang-installer-banner.md  2026-07-23-release-installer.md  2026-07-23-support-usdt-network.md  2026-07-23-v0.9.4-release-notes.md  2026-07-23-v0.9.5-neon-fang-release.md
docs/superpowers/specs/: 2026-07-02-fang-design.md  2026-07-18-ddc-discovery-circuit-breaker-design.md  2026-07-18-fedora-rpm-support-design.md  2026-07-18-release-installer-design.md  2026-07-23-beginner-friendly-readme-design.md  2026-07-23-beginner-readme-release-contract-reconciliation-design.md  2026-07-23-documentation-deb-rebuild-design.md  2026-07-23-neon-fang-installer-banner-design.md  2026-07-23-usdt-network-label-design.md  2026-07-23-v0.9.4-release-notes-design.md  2026-07-23-v0.9.5-neon-fang-release-design.md
packaging/: fangd.service  install-from-source.sh  install.sh
packaging/deb/: postinst  verify.sh  verify.test.mjs
packaging/installer/: banner.txt  installer.test.mjs
packaging/release/: publish.sh  publish.test.mjs  release-contract.mjs  release-contract.test.mjs
packaging/rpm/: build-script.test.mjs  build.sh  fang.desktop  fang.spec  fang.sysusers  fangd.spec  metadata.test.mjs  mock_smoke.py  mock_smoke_test.py  verify.sh
