[workspace]
resolver = "2"
members = ["crates/fang-protocol", "crates/fangd"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"
repository = "https://github.com/solomonmorse/fang"
authors = ["Solomon Morse <bladeandsoulx@protonmail.com>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
