[workspace]
resolver = "2"
members = ["crates/fang-protocol", "crates/fangd"]
# The Tauri shell builds standalone (own lockfile) so daemon builds stay lean.
exclude = ["app/src-tauri"]

[workspace.package]
version = "0.9.3"
edition = "2021"
license = "GPL-2.0"
repository = "https://github.com/bladeandsoulx/fang-razer-linux"
authors = ["Solomon Morse <bladeandsoulx@protonmail.com>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
