[package]
name = "fang"
description = "Fang — Synapse-style control center for Razer Blade laptops on Linux"
version = "0.9.5"
edition = "2021"
license = "GPL-2.0"
repository = "https://github.com/bladeandsoulx/fang-razer-linux"
authors = ["Solomon Morse <bladeandsoulx@protonmail.com>"]

# Standalone: not a member of the repo-root cargo workspace.
[workspace]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
fang-protocol = { path = "../../crates/fang-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = ["net", "io-util", "sync", "time", "macros", "rt"] }
log = "0.4"
env_logger = "0.11"

# GNOME Mutter DisplayConfig (refresh-rate control) — Linux desktops only.
[target.'cfg(target_os = "linux")'.dependencies]
zbus = "4"

[profile.release]
strip = true
lto = true
