[package]
name = "fangd"
description = "Fang daemon: performance mode, fan control and telemetry for Razer Blade laptops"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
fang-protocol = { path = "../fang-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "time",
    "sync",
    "signal",
] }
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_os = "linux")'.dependencies]
hidapi = "2"
nvml-wrapper = "0.10"

# --- cargo-deb metadata (build with: cargo deb -p fangd) ---
[package.metadata.deb]
maintainer = "Solomon Morse <bladeandsoulx@protonmail.com>"
extended-description = "Privileged daemon exposing performance modes, fan control and telemetry for Razer Blade laptops over a local socket."
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/fangd", "usr/bin/", "755"],
    ["../../packaging/fangd.service", "lib/systemd/system/", "644"],
]
maintainer-scripts = "../../packaging/deb"

[package.metadata.deb.systemd-units]
unit-name = "fangd"
enable = true
start = true
